fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -537,8 +537,9 @@ body {
 }
 @media screen and (max-width: 480px) {
     .coursework_tab {
-        width: 20%;
+        width: 25%;
         height: auto;
+        margin-left: 30%;
         font-size: 20px;
         margin-top: 12%;
     }
@@ -569,4 +570,3 @@ body {
     transform: translate(-50%, -50%) rotate(360deg); 
     box-shadow: 2px 2px 5px 2px lightgray;
 }
-
